maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:42: error: not found: value facing
         while(facing north and is not in front of a wall)
               ^IslandMaze:42: error: not found: value and
         while(facing north and is not in front of a wall)
                            ^IslandMaze:42: error: not found: value not
         while(facing north and is not in front of a wall)
                                   ^IslandMaze:42: error: not found: value front
         while(facing north and is not in front of a wall)
                                          ^IslandMaze:42: error: not found: value a
         while(facing north and is not in front of a wall)
                                                   ^